applications/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
spec:
  selector:
    app: plex
  ports:
  - name: pms
    port: 32400
    targetPort: 32400
